# tugraph-db

./: .aci.yml  .clang-format  .clangd  .gitignore  .gitmodules  .readthedocs.yaml  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CPPLINT.cfg  GenerateVersionInfo.cmake  LICENSE  Options.cmake  README-CN.md  README.md  README_CN.md  born_in.csv  city.csv  codecov.yml  debug.sh  docs  index.html  markdown-page.html  mkdocs.yml  opensearch.xml  output.txt  person.csv  search.html  sitemap.xml  yago.conf
demo/CppRpcClientDemo/: CMakeLists.txt  client_demo.cpp  compile.sh
demo/MultithreadClient/: CMakeLists.txt  README.md  client.cpp  client.h  client_thread_pool.h  config.h  cypher_sender.cpp  cypher_sender.h  delete_plugin.cpp  delete_plugin.h  load_plugin.cpp  load_plugin.h  multi_thread_client.cpp  plugin_sender.cpp  plugin_sender.h
learn/: CMakeLists.txt  README.md  WORKSPACE  make_cython_so.sh  setup.py
learn/benchmarks/: kernels.py  utils.py
learn/csrc/: sparse.cc
learn/docker/: dockerfile
learn/examples/: train_cora.py  train_full_cora.py  train_full_mag.py
learn/procedures/: edge_sampling.py  getdb.py  negative_sampling.py  neighbors_sampling.py  node2vec_sampling.py  random_walk.py  setup.py
learn/tests/: sparse_test.py
plugins/: CMakeLists.txt  embed_main.cpp  embed_main.py  make_cython_so.sh  make_embed.sh  make_so.sh  make_standalone.sh  standalone_main.py
plugins/cpp/: algo.h  bc_procedure.cpp  bfs_core.cpp  bfs_procedure.cpp  bfs_standalone.cpp  dc_standalone.cpp  de_procedure.cpp  echo_binary.cpp  fast_triangle_counting_core.cpp  fast_triangle_counting_procedure.cpp  feature_float.cpp  hits_procedure.cpp  ji_standalone.cpp  kcore_procedure.cpp  kcore_standalone.cpp  khop_kth.cpp  khop_within.cpp  lcc_core.cpp  lcc_procedure.cpp  lcc_standalone.cpp  louvain_core.cpp  louvain_procedure.cpp  lpa_core.cpp  lpa_procedure.cpp  lpa_standalone.cpp  merge.h  merge_reduced.h  pagerank_core.cpp  pagerank_procedure.cpp  pagerank_standalone.cpp  sssp_core.cpp  sssp_procedure.cpp  sssp_standalone.cpp  wcc_core.cpp  wcc_procedure.cpp  wcc_standalone.cpp
plugins/cython/: bfs.py  lcc.py  lpa.py  pagerank.py  setup.py  sssp.py  wcc.py
plugins/python/: deepwalk.py  gcn.py  pagerank.py  scan_graph.py  sleep.py
procedures/: CMakeLists.txt  embed_main.cpp  make_custom_embed.sh  make_custom_so_cpp.sh  make_embed.sh  make_procedure_so_cython.sh  make_so_cpp.sh  make_so_cython.sh  make_standalone.sh  make_standalone_so_cython.sh  run_embed.py  run_standalone.py
procedures/algo_cpp/: algo.h  apsp_core.cpp  apsp_procedure.cpp  apsp_standalone.cpp  bc_core.cpp  bc_procedure.cpp  bc_standalone.cpp  bfs_core.cpp  bfs_procedure.cpp  bfs_procedure_custom.cpp  bfs_procedure_v2.cpp  bfs_standalone.cpp  clce_core.cpp  clce_procedure.cpp  clce_standalone.cpp  cn_core.cpp  cn_procedure.cpp  cn_standalone.cpp  dc_core.cpp  dc_procedure.cpp  dc_standalone.cpp  de_core.cpp  de_procedure.cpp  de_standalone.cpp  en_core.cpp  en_procedure.cpp  en_standalone.cpp  fast_triangle_counting_core.cpp  fast_triangle_counting_procedure.cpp  fast_triangle_counting_standalone.cpp  feature_float.cpp  hits_core.cpp  hits_procedure.cpp  hits_standalone.cpp  ji_core.cpp  ji_procedure.cpp  ji_standalone.cpp  kcliques_core.cpp  kcliques_procedure.cpp  kcliques_standalone.cpp  (+84 more)
procedures/algo_cython/: bfs.py  bfs_procedure.py  bfs_standalone.py  lcc.py  lcc_procedure.py  lcc_standalone.py  lpa.py  lpa_procedure.py  lpa_standalone.py  pagerank.py  pagerank_procedure.py  pagerank_standalone.py  setup.py  sssp.py  sssp_procedure.py  sssp_standalone.py  wcc.py  wcc_procedure.py  wcc_standalone.py
procedures/business_cpp/: bc_procedure.cpp  clce_procedure.cpp  cn_procedure.cpp  lcc_procedure.cpp  pagerank_procedure.cpp  sssp_procedure.cpp  trustrank_procedure.cpp  wcc_procedure.cpp
procedures/community/: README.md  khop_core.cpp  khop_standalone.cpp
procedures/cpp/: first_example.cpp
procedures/custom_cpp/: bc_procedure.cpp  bfs_procedure.cpp  clce_procedure.cpp  cn_procedure.cpp  dc_procedure.cpp  de_procedure.cpp  ji_procedure.cpp  lcc_procedure.cpp  leiden_procedure.cpp  louvain_procedure.cpp  lpa_procedure.cpp  mis_procedure.cpp  motif_procedure.cpp  mssp_procedure.cpp  pagerank_procedure.cpp  scc_procedure.cpp  sssp_procedure.cpp  subgraph_isomorphism_procedure.cpp  triangle_procedure.cpp  trustrank_procedure.cpp  wcc_procedure.cpp
procedures/demo/: custom_pagerank.cpp  echo.py  log_demo.cpp  merge.h  merge_reduced.h  v1_scan_graph.cpp  v2_pagerank.cpp
procedures/misc/: gcn.py  lgraph_plugin.py
src/: BuildBoltLib.cmake  BuildClients.cmake  BuildCypherLib.cmake  BuildCythonExtension.cmake  BuildLGraphApi.cmake  BuildLGraphApiForJNI.cmake  BuildLGraphServer.cmake  BuildPyClient.cmake  BuildPythonApi.cmake  BuildPythonPackage.cmake  CMakeLists.txt  CPPLINT.cfg
src/algo/: algo.cpp  algo.h
src/bolt/: blocking_queue.h  bolt_server.h  (+18 more)
test/: CMakeLists.txt  QueryTester.cpp  QueryTester.h  asan.suppress  cypher_plan_validate.json  graph_factory.h  graph_gen.h  graph_yago.cypher  main.cpp  myasan.supp  mylsan.supp  random_port.h  test_alter_detached_label.cpp  test_audit_logger.cpp  test_backup_restore.cpp  test_batch_edge_index.cpp  test_batch_vertex_index.cpp  test_benchmark.cpp  test_bit_mask.cpp  test_blob_manager.cpp  test_bolt_hydrator.cpp  test_c.cpp  test_cache_aligned_vector.cpp  test_column_vector.cpp  test_concurrency.cpp  test_concurrent_gettime.cpp  test_core_exception.cpp  test_cpp_plugin.cpp  test_cpp_procedure.cpp  test_cppresetsdk_json.cpp  test_cypher.cpp  test_cypher_field_data.cpp  test_cypher_plan.cpp  test_cypher_v2.cpp  test_data_type.cpp  test_db_management_client.cpp  test_del_detached_label.cpp  test_dense_string.cpp  test_detach_property.cpp  test_edge_constraint.cpp  (+113 more)
toolkits/: CMakeLists.txt  CPPLINT.cfg  lgraph_auditlog.py  lgraph_backup.cpp  lgraph_binlog.cpp  lgraph_cli.cpp  lgraph_compilation.cpp  lgraph_export.cpp  lgraph_import.cpp  lgraph_monitor.cpp  lgraph_peek.cpp  lgraph_peer.cpp  lgraph_validate.cpp  lgraph_warmup.cpp  test_query_plan.cpp  websocket.cpp
(+14039 files in other folders)
